--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "nestjs-telegraf": "^2.7.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "telegraf": "^4.16.3"
